Update My Portfolio

--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+
 .name
 {
 	font-size: 35px;
@@ -26,22 +27,23 @@
 	text-align: justify;
 	
 }
-.about-section, .education-section, .skils-section, .project-section
+.home-content,.about-section,.education-section, .skils-section, .project-section
 {
-	margin-top: 50px;
+	margin-top: 70px;
 	position: relative;
-	margin-bottom: 150px;
+	margin-bottom: 100px;
 }
 .contact-section
 {
-	margin-top: 100px;
+	margin-top: 80px;
 	position: relative;
+  margin-bottom: 50px;
 }
 .hello-img
 {
-	margin-top: 80px;
-	min-height: 150px;
-	max-height: 250px;
+	margin-top: 50px;
+	min-height: 250px;
+	max-height: 300px;
 }
 .img-fluid
 {
@@ -50,8 +52,7 @@
 }
 .card
 {
-	margin-top: 5%;
-	margin-left: 10%;
+	margin-top: 10%;
 }
 section .title{
 	margin-top: 20px;
@@ -60,6 +61,16 @@ section .title{
     font-size: 40px;
     font-weight: 500;
     margin-bottom: 50px;
+    padding-bottom: 10px;
+}
+#abttitle
+{
+    margin-top: 20px;
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 0px;
     padding-bottom: 10px;
 }
 section .title::before{
@@ -72,16 +83,7 @@ section .title::before{
     background: #111;
     transform: translateX(-50%);
 }
-section .title::after{
-    position: absolute;
-    bottom: -8px;
-    left: 50%;
-    font-size: 20px;
-    color: crimson;
-    padding: 0 5px;
-    background: #fff;
-    transform: translateX(-50%);
-}
+
 #education .card:hover{
     background: rgb(20, 160, 220);
     color: white;
@@ -131,167 +133,23 @@ section .title::after{
     background: rgb(20, 153, 220);
 }
 .html::before{
-    width: 65%;
+    width: 95%;
 }
 .css::before{
-    width: 60%;
+    width: 80%;
 }
 .js::before{
-    width: 35%;
+    width: 60%;
 }
-.c::before{
-    width: 50%;
+.p::before{
+    width: 75%;
 }
 .cj::before{
-    width: 80%;
+    width: 90%;
 }
 .dbms::before{
     width: 70%;
 }
-
-
-/* scroll bar */
-::-webkit-scrollbar {
-    width: 10px;
-}
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-::-webkit-scrollbar-thumb {
-    background: #888;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
-
-.contact .info-box {
-  color: #444444;
-  text-align: center;
-  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-  padding: 20px 0 30px 0;
-}
-
-.contact .info-box i.bx {
-  font-size: 24px;
-  color: #ffb727;
-  border-radius: 50%;
-  padding: 15px;
-  background: #fff6e4;
-}
-
-.contact .info-box h3 {
-  font-size: 20px;
-  color: #777777;
-  font-weight: 700;
-  margin: 10px 0;
-}
-
-.contact .info-box p {
-  padding: 0;
-  line-height: 24px;
-  font-size: 14px;
-  margin-bottom: 0;
-}
-
-.contact .social-links {
-  margin-top: 15px;
-  display: flex;
-  justify-content: center;
-}
-
-.contact .social-links a {
-  font-size: 18px;
-  display: inline-block;
-  color: #687683;
-  line-height: 1;
-  margin: 0 8px;
-  transition: 0.3s;
-  padding: 14px;
-  border-radius: 50px;
-  border: 1px solid #dde1e4;
-}
-
-.contact .social-links a:hover {
-  color: #fff;
-  border-color: #ffb727;
-  background: #ffb727;
-}
-
-.contact .php-email-form {
-  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-  padding: 27px;
-}
-
-.contact .php-email-form .validate {
-  display: none;
-  color: red;
-  margin: 0 0 15px 0;
-  font-weight: 400;
-  font-size: 13px;
-}
-
-.contact .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .error-message br+br {
-  margin-top: 25px;
-}
-
-.contact .php-email-form .sent-message {
-  display: none;
-  color: #fff;
-  background: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .loading {
-  display: none;
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
-
-.contact .php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  animation: animate-loading 1s linear infinite;
-}
-
-.contact .php-email-form input,
-.contact .php-email-form textarea {
-  border-radius: 0;
-  box-shadow: none;
-  font-size: 14px;
-}
-
-.contact .php-email-form input::focus,
-.contact .php-email-form textarea::focus {
-  background-color: #ffb727;
-}
-
-.contact .php-email-form input {
-  padding: 10px 15px;
-}
-
-.contact .php-email-form textarea {
-  padding: 12px 15px;
-}
-
 
 /* footer */
 footer{
@@ -324,3 +182,4 @@ footer span a:hover{
 .card:hover {
   transform: translateY(-10px);
 }
+
